--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,2 +1,6 @@
 org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
+# Workaround for Kotlin incremental compilation crash on Windows when pub cache
+# (C:\) and project (D:\) are on different drives — cross-drive relative paths
+# are not supported by the Kotlin incremental compiler.
+kotlin.incremental=false
